# modelEditor

./: AddCatalogSourcesDialog.py  CMakeLists.txt  CatalogSourceExtractor.py  DS9Connector.py  Element.py  ElementEditor.py  FitsFile.py  HelpWindow.py  ModelEditor.py  Parameter.py  ParameterEditor.py  ParameterSet.py  README.md  SConscript  Source.py  SourceEditor.py  SourceLibrary.py  SourceLibraryDocument.py  SourceLibraryDocumentEditor.py  SourceLibraryEditor.py  SpatialModel.py  SpatialModelEditor.py  Spectrum.py  SpectrumEditor.py  azure-pipelines.yml
src/: modeleditor.cxx  modeleditor.cxx~
